--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -173,10 +173,10 @@
                                            onstart="return isClose = 1;"
                                            ajax="false"
                                            action="#{sessionBean.openProcessExpl()}"/>
-                            <p:commandLink value="#{bundle.MonitorConcorded}"
+                            <p:commandLink value="#{bundle.ProcessExecutionControl}"
                                            onstart="return isClose = 1;"
                                            ajax="false"
-                                           action="#{sessionBean.openProcessExpl()}"/>
+                                           action="#{sessionBean.openMonitor()}"/>
                         </p:panelGrid>
                     </p:panel>
 
