--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -10,21 +10,17 @@
     <ui:define name="specActionMenu" >
     </ui:define>
 
-    <ui:define name="toolbarComponents" >
-        <p:toolbar >
-            <f:facet name="left">                
-                <ui:repeat value="#{taskCardBean.taskResults}" var="result" rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_RUNNING}" >
-                    <p:commandButton value="#{resultBean.getLabelFromBundle(result.getName())}" 
-                                     icon="#{result.getIconName()}"
-                                     disabled="#{!taskCardBean.haveRightExec}"
-                                     update="#{_frm}"
-                                     actionListener="#{taskCardBean.onExecute(result)}">
-                        <f:param name="isRequired" value="true"/>
-                    </p:commandButton>
-                </ui:repeat>
-            </f:facet>
-        </p:toolbar>       
-
+    <ui:define name="specToolButtons" >                    
+        <ui:repeat value="#{taskCardBean.taskResults}" var="result" rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_RUNNING}" >
+            <p:commandButton value="#{resultBean.getLabelFromBundle(result.getName())}" 
+                             icon="#{'ico_'.concat(result.getIconName())}"
+                             disabled="#{!taskCardBean.haveRightExec}"
+                             update="#{_frm}"
+                             actionListener="#{taskCardBean.onExecute(result)}"
+                             oncomplete="return itemChange = 0;">
+                <f:param name="isRequired" value="true"/>
+            </p:commandButton>
+        </ui:repeat>
     </ui:define>
     
     <ui:define name="page_body">
@@ -66,7 +62,7 @@
                                     locale="#{sessionBean.locale}" 
                                     timeZone="#{TimeZone.getDefault()}" 
                                     showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
-                                    navigator="true" yearRange="c-120:c+20"                     
+                                    navigator="true" yearRange="c-1:c+20"                     
                                     requiredMessage="#{bundle.Field} [#{bundle.DateBegin}] #{bundle.MustBeFilled}">
                             <p:ajax event="dateSelect" onstart="itemChange = 1;" />
                         </p:calendar>
@@ -78,44 +74,44 @@
                                     locale="#{sessionBean.locale}" 
                                     timeZone="#{TimeZone.getDefault()}" 
                                     showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
-                                    navigator="true" yearRange="c-120:c+20">
+                                    navigator="true" yearRange="c-1:c+20">
                             <p:ajax event="dateSelect" onstart="itemChange = 1;" />
-                        </p:calendar>
-
-                        <p:selectOneRadio id="typeDatePlan" value="#{taskCardBean.editedItem.deadLineType}" layout="custom">
-                            <f:selectItem itemLabel="" itemValue="delta"/>
-                            <f:selectItem itemLabel="" itemValue="data" />
-                            <p:ajax update="planEndDate deltaDay deltaHour" event="valueChange" onstart="itemChange = 1;"/>
-                        </p:selectOneRadio>
+                        </p:calendar>                      
 
                         <p:outputLabel value="#{bundle.PlanEndDate}:" indicateRequired="true"/> 
-
+                        
                         <h:panelGrid columns="2" cellpadding="3" >
-                            <p:radioButton id="typeDelta" for="typeDatePlan" itemIndex="0" disabled="#{taskCardBean.readOnly}"/>
-                            <h:panelGroup>
-                                <p:spinner id="deltaDay" value="#{taskCardBean.deadLineDeltaDay}" min="0" max="999" 
-                                           suffix="#{bundle.DayShort}" size="3" 
-                                           onchange="return itemChange = 1;"
-                                           disabled="#{taskCardBean.readOnly or taskCardBean.editedItem.deadLineType eq 'data'}">
-                                </p:spinner>
-                                <p:spinner id="deltaHour" value="#{taskCardBean.deadLineDeltaHour}" min="0" max="99" 
-                                           suffix="#{bundle.HourShort}" size="2"
-                                           onchange="return itemChange = 1;"
-                                           disabled="#{taskCardBean.readOnly or taskCardBean.editedItem.deadLineType eq 'data'}">
-                                </p:spinner>
-                            </h:panelGroup>
+                            <p:selectOneRadio id="typeDatePlan" value="#{taskCardBean.editedItem.deadLineType}" disabled="#{taskCardBean.readOnly}" layout="grid" columns="1" >
+                                <f:selectItem itemLabel="" itemValue="delta"/>
+                                <f:selectItem itemLabel="" itemValue="data" />
+                                <p:ajax update="planEndDate deltaDay deltaHour" event="valueChange" onstart="itemChange = 1;"/>
+                            </p:selectOneRadio>
+                           
+                            <h:panelGrid columns="1" cellpadding="3" styleClass="ui-grid-col-12">
+                                <h:panelGroup>
+                                    <p:spinner id="deltaDay" value="#{taskCardBean.deadLineDeltaDay}" min="0" max="999" 
+                                               suffix="#{bundle.DayShort}" size="3" 
+                                               onchange="return itemChange = 1;"
+                                               disabled="#{taskCardBean.readOnly or taskCardBean.editedItem.deadLineType eq 'data'}">
+                                    </p:spinner>
+                                    <p:spinner id="deltaHour" value="#{taskCardBean.deadLineDeltaHour}" min="0" max="99" 
+                                               suffix="#{bundle.HourShort}" size="2"
+                                               onchange="return itemChange = 1;"
+                                               disabled="#{taskCardBean.readOnly or taskCardBean.editedItem.deadLineType eq 'data'}">
+                                    </p:spinner>
+                                </h:panelGroup>
 
-                            <p:radioButton id="typeData" for="typeDatePlan" itemIndex="1" disabled="#{taskCardBean.readOnly}"/>  
-                            <p:calendar id="planEndDate" value="#{taskCardBean.editedItem.planExecDate}" disabledWeekends="true" 
-                                        styleClass="without-spaces" pages="3"
-                                        timeZone="#{TimeZone.getDefault()}"
-                                        showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
-                                        disabled="#{taskCardBean.readOnly or taskCardBean.editedItem.deadLineType eq 'delta'}"
-                                        locale="#{sessionBean.locale}"
-                                        navigator="true" yearRange="c-1:c+20" timeInput="true" 
-                                        requiredMessage="#{bundle.Field} [#{bundle.PlanEndDate}] #{bundle.MustBeFilled}">
-                                <p:ajax event="dateSelect" onstart="itemChange = 1;" />
-                            </p:calendar>
+                                <p:calendar id="planEndDate" value="#{taskCardBean.editedItem.planExecDate}" disabledWeekends="true" 
+                                            styleClass="without-spaces" pages="2"
+                                            timeZone="#{TimeZone.getDefault()}"
+                                            showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
+                                            disabled="#{taskCardBean.readOnly or taskCardBean.editedItem.deadLineType eq 'delta'}"
+                                            locale="#{sessionBean.locale}"
+                                            navigator="true" yearRange="c-1:c+20" timeInput="true" 
+                                            requiredMessage="#{bundle.Field} [#{bundle.PlanEndDate}] #{bundle.MustBeFilled}">
+                                    <p:ajax event="dateSelect" onstart="itemChange = 1;" />
+                                </p:calendar>
+                            </h:panelGrid>
                         </h:panelGrid>
 
                         <p:outputLabel value="#{bundle.ActualEndDate}:" rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_COMPLETED}"/>
@@ -186,7 +182,7 @@
             </p:panelGrid>
         </p:tab>
 
-        <p:tab title="#{bundle.Reminder}">   
+        <p:tab title="#{bundle.Reminder}" rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_COMPLETED}">
             <ui:include src="/view/tasks/task-remaind.xhtml"/>
         </p:tab>
 
@@ -194,7 +190,9 @@
             <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">                   
                 <p:outputLabel value="#{bundle.Comment}"/>
                 <p:textEditor value="#{taskCardBean.editedItem.comment}" 
-                              readonly="#{taskCardBean.readOnly}"
+                              readonly="#{taskCardBean.typeEdit eq DictEditMode.VIEW_MODE
+                                          or !taskCardBean.haveRightExec
+                                          or taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_STATE_RUNNING }"
                               height="300" styleClass="ui-grid-col-12"/>                                                           
             </p:panelGrid>
         </p:tab>
