--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -28,7 +28,7 @@
 
     <ui:define name="centerFormContent">
         <p:panel toggleable="true" header="#{bundle.Filter}" toggleSpeed="500" >
-            <p:panelGrid columns="3" columnClasses="ui-grid-col-6 ui-grid-col-5 ui-grid-col-1" styleClass="without-spaces">
+            <p:panelGrid columns="4" columnClasses="ui-grid-col-6 ui-grid-col-5 ui-grid-col-1" styleClass="without-spaces">
                 <h:panelGrid columns="1" styleClass="without-spaces">
                     <p:outputLabel value="#{bundle.Initiator}:" />
                     <ui:include src="/view/common/item-select-list-btn.xhtml" >
@@ -56,7 +56,7 @@
                                     navigator="true" yearRange="c-10:c+20"
                                     locale="#{sessionBean.locale}"
                                     pattern="dd.MM.yyyy HH:mm:ss"
-                                    required="#{param['isRequired'] == 'true'}"
+                                    required="false"
                                     requiredMessage="#{bundle.Field} [#{bundle.DateStart}  #{bundle.MustBeFilled}">
                         </p:calendar>
 
@@ -67,13 +67,24 @@
                                     showHour="true" showMinute="true"
                                     locale="#{sessionBean.locale}"
                                     pattern="dd.MM.yyyy HH:mm:ss"
-                                    required="#{param['isRequired'] == 'true'}"
+                                    required="false"
                                     requiredMessage="#{bundle.Field} #{bundle.DateEnd} #{bundle.MustBeFilled}">
                         </p:calendar>
-                    </h:panelGrid>
+                    </h:panelGrid>                                        
                 </h:panelGrid>
-
-                <p:commandButton value="#{bundle.Find}" id="btnSearche" update="centerFRM">
+                
+                <h:panelGrid columns="1" styleClass="without-spaces">
+                    <p:outputLabel value="#{bundle.States}:" />
+                    <p:selectManyMenu value="#{monitorBean.states}" converter="stateConvertor" var="st" showCheckbox="true">
+                        <f:selectItems value="#{processBean.metadatesObj.statesList}" var="state" itemLabel="#{state.name}" itemValue="#{state}" />
+                         <p:column>
+                             <h:outputText value="#{monitorBean.getLabelFromBundle(st.name)}" />
+                        </p:column>
+                    </p:selectManyMenu>
+                </h:panelGrid>
+                
+                <p:commandButton value="#{bundle.Find}" id="btnSearche" 
+                                 actionListener="#{monitorBean.onRefreshData()}" update="centerFRM">
                     <f:param name="isRequired" value="true"/>
                 </p:commandButton>
             </p:panelGrid>
