Начато создание шаблонов процессов

--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -102,6 +102,7 @@
                      tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 without-spaces">                
 
             <p:column width="20" sortBy="#{item.iconName}" >
+                <p:spacer width="3"/>
                 <p:graphicImage value="/resources/icon/#{item.iconName}20.png" /> 
             </p:column>
 
